5.0/_sources/autodoctools.rst.txt
.. |Double| replace:: :class:`~hydpy.cythons.autogen.pointerutils.Double`
.. |False| replace:: :const:`False`
.. |HydPy| replace:: :class:`~hydpy.core.hydpytools.HydPy`
.. |Masks| replace:: :class:`~hydpy.core.masktools.Masks`
.. |NDArrayFloat| replace:: :const:`~hydpy.core.typingtools.NDArrayFloat`
.. |NodeMasks| replace:: :class:`~hydpy.core.masktools.NodeMasks`
.. |Node| replace:: :class:`~hydpy.core.devicetools.Node`
.. |OptionContextBase._new_value| replace:: :attr:`~hydpy.core.optiontools.OptionContextBase._new_value`
.. |OptionContextBase._old_value| replace:: :attr:`~hydpy.core.optiontools.OptionContextBase._old_value`
.. |Options.ellipsis| replace:: :const:`~hydpy.core.optiontools.Options.ellipsis`
.. |Options.reprdigits| replace:: :const:`~hydpy.core.optiontools.Options.reprdigits`
.. |PPDouble.set_pointer| replace:: :func:`~hydpy.cythons.autogen.pointerutils.PPDouble.set_pointer`
.. |RuleIUH.update_parameters| replace:: :attr:`~hydpy.auxs.calibtools.RuleIUH.update_parameters`
.. |Substituter.add_module| replace:: :func:`~hydpy.core.autodoctools.Substituter.add_module`
.. |Substituter.consider_member| replace:: :func:`~hydpy.core.autodoctools.Substituter.consider_member`
.. |Substituter.get_commands| replace:: :func:`~hydpy.core.autodoctools.Substituter.get_commands`
.. |Substituter.short2long| replace:: :attr:`~hydpy.core.autodoctools.Substituter.short2long`
.. |Substituter.update_masters| replace:: :func:`~hydpy.core.autodoctools.Substituter.update_masters`
.. |Substituter.update_slaves| replace:: :func:`~hydpy.core.autodoctools.Substituter.update_slaves`
.. |Substituter| replace:: :class:`~hydpy.core.autodoctools.Substituter`
.. |Timegrids.initindices| replace:: :const:`~hydpy.core.timetools.Timegrids.initindices`
.. |Timegrids.init| replace:: :attr:`~hydpy.core.timetools.Timegrids.init`
.. |True| replace:: :const:`True`
.. |autodoc_applicationmodel| replace:: :func:`~hydpy.core.autodoctools.autodoc_applicationmodel`
.. |autodoc_basemodel| replace:: :func:`~hydpy.core.autodoctools.autodoc_basemodel`
.. |builtins| replace:: :mod:`~builtins`
.. |config| replace:: :mod:`~hydpy.config`
.. |numpy| replace:: :mod:`~numpy`
.. |optiontools| replace:: :mod:`~hydpy.core.optiontools`
.. |pointerutils| replace:: :mod:`~hydpy.cythons.autogen.pointerutils`
.. |pub| replace:: :mod:`~hydpy.pub`
.. |typingtools| replace:: :mod:`~hydpy.core.typingtools`
.. |calibtools.RuleIUH.update_parameters| replace:: :attr:`~hydpy.auxs.calibtools.RuleIUH.update_parameters`
.. |devicetools.Node| replace:: :class:`~hydpy.core.devicetools.Node`
.. |hydpytools.HydPy| replace:: :class:`~hydpy.core.hydpytools.HydPy`
.. |masktools.Masks| replace:: :class:`~hydpy.core.masktools.Masks`
.. |masktools.NodeMasks| replace:: :class:`~hydpy.core.masktools.NodeMasks`
.. |numpy.clip| replace:: :func:`~numpy.clip`
.. |numpy.nan| replace:: :const:`~numpy.nan`
.. |numpy.ndarray.clip| replace:: :func:`~numpy.ndarray.clip`
.. |numpy.ndarray| replace:: :class:`~numpy.ndarray`
.. |optiontools.TypeOptionPropertyBase| replace:: :const:`~hydpy.core.optiontools.TypeOptionPropertyBase`
.. |optiontools.TypeOption| replace:: :const:`~hydpy.core.optiontools.TypeOption`
.. |pointerutils.PPDouble.set_pointer| replace:: :func:`~hydpy.cythons.autogen.pointerutils.PPDouble.set_pointer`
.. |timetools.Timegrids.initindices| replace:: :const:`~hydpy.core.timetools.Timegrids.initindices`
.. |timetools.Timegrids.init| replace:: :attr:`~hydpy.core.timetools.Timegrids.init`

.. _autodoctools:

autodoctools
============

.. automodule:: hydpy.core.autodoctools
    :members:
    :show-inheritance:
    :exclude-members: Self, Reversible, Generic, Sized, Awaitable, IntVar, clear_overloads, TypeAlias, Sequence, Hashable, SUBMETHODS, SupportsAbs, AnyStr, assert_never, reveal_type, CLASSES, REQUIREDSEQUENCES, ItemsView, Union, SupportsFloat, get_overloads, get_origin, OUTLET_METHODS, NoReturn, no_type_check, Type, Final, PART_ODE_METHODS, RECEIVER_METHODS, Tuple, AbstractSet, ByteString, MappingView, subpars, MutableSequence, MutableSet, SupportsRound, CONTROLPARAMETERS, INLET_METHODS, get_protocol_members, SOLVERSEQUENCES, FrozenSet, no_type_check_decorator, fastaccess_old, Mapping, FIXEDPARAMETERS, seqs, KeysView, SUBMODELS, Protocol, SupportsComplex, SENDER_METHODS, ContextManager, deprecated, SupportsBytes, get_original_bases, Iterator, is_protocol, TypeGuard, DefaultDict, LiteralString, Required, TextIO, TYPE_CHECKING, AsyncContextManager, fastaccess_new, FULL_ODE_METHODS, SOLVERPARAMETERS, BinaryIO, fastaccess, runtime, IO, Text, TypeVarTuple, ValuesView, AsyncIterable, Generator, Optional, assert_type, Literal, dataclass_transform, subvars, pars, get_args, ParamSpec, Annotated, cast, final, subseqs, ClassVar, Any, Unpack, Coroutine, is_typeddict, Counter, UPDATEDSEQUENCES, Callable, Dict, NamedTuple, overload, OrderedDict, Set, ADD_METHODS, Collection, Pattern, List, get_type_hints, Concatenate, ParamSpecKwargs, DERIVEDPARAMETERS, AsyncGenerator, override, Container, RUN_METHODS, NotRequired, NewType, RESULTSEQUENCES, SupportsInt, Buffer, Iterable, TypeVar, SupportsIndex, MutableMapping, ChainMap, ForwardRef, TypeAliasType, AsyncIterator, Never, ParamSpecArgs, Match, Deque, TypedDict, runtime_checkable
